added gravatar to statuses

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,7 +2,7 @@
 kjellski:
   first_name: "Kjell"
   last_name: "Otto"
-  email: "o.k@gm.com"
+  email: "otto.kjell@gmail.com"
   profile_name: "kjellski"
 
 anna:
